# 01.Kiosk

./: .gitignore  LICENSE  README.md  install.sh  kiosk-break.sh  kiosk-diag.sh  kiosk-exit-overlay.py  kiosk-launch.sh  uninstall.sh
.github/workflows/: publish-to-deployment-server.yml
autostart/: kiosk.desktop
components/kiosk/: config_app.py  pyproject.toml
kiosk-config/: config_app.py
systemd/: kiosk-browser.service
